--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
     <br><br>
     <div class="container">
         <div class="carousel" id="carousel">
-            <img src="images/1.jpg" alt="Photo 1">
+            <img src="images/1.JPG" alt="Photo 1">
             <img src="images/2.jpg" alt="Photo 2">
            
         </div>
