--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         body {
             margin: 0;
             font-family: 'Verdana', sans-serif; /* Changed Font */
-            background: url('images/bg.webp') no-repeat center center fixed;
+            background: url('images/bg.jpg') no-repeat center center fixed;
             background-size: cover;
             color: white;
             overflow-x: hidden;
