--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         body {
             margin: 0;
             font-family: 'Verdana', sans-serif; /* Changed Font */
-            background: url('images/bg.jpg') no-repeat center center fixed;
-            background-size: cover;
-            color: white;
-            overflow-x: hidden;
+            background: url('images/bg.webp') no-repeat center center fixed;
+            background-sizden;
             animation: backgroundPulse 10s infinite;
         }
     
         .header {
-            background-color: #0e0e0e; /* Professional Dark Theme */
+            background-coloe: cover;
+            color: white;
+            overflow-x: hidr: #0e0e0e; /* Professional Dark Theme */
             padding: 10px 0;
             color: rgb(247, 247, 247);
             text-align: center;
