--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         body {
             margin: 0;
             font-family: 'Verdana', sans-serif; /* Changed Font */
-            background: url('images/bg.webp') no-repeat center center fixed;
+            background: url('images/bg.png') no-repeat center center fixed;
             background-sizden;
             animation: backgroundPulse 10s infinite;
         }
