--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         body {
             margin: 0;
             font-family: 'Verdana', sans-serif; /* Changed Font */
-            background: url('images/bg.png') no-repeat center center fixed;
+            background: url('images/bg.jpg') no-repeat center center fixed;
             background-sizden;
             animation: backgroundPulse 10s infinite;
         }
@@ -65,7 +65,7 @@
             height: 550px; 
             margin: 20px auto;
             overflow: hidden;
-            border-radius: 10px;
+            //border-radius: 10px;
             animation: slideIn 2s ease-out;
             border: 3px solid #0d47a1; /* Blue for Professionalism */
         }
@@ -344,7 +344,7 @@
                 <button onclick="showPopup('images/sms.png')"><b>&#x1F4F7; SMS</b></button>
                 <button onclick="showPopup('images/whatsapp.png')"><b>&#x1F4F7; WhatsApp</b></button>
                 <button onclick="showPopup('images/email.png')"><b>&#x1F4F7; Email</b></button>
-                <button onclick="showPopup('images/facebook.png')"><b>&#x1F4F7; Email</b></button>
+                <button onclick="showPopup('images/facebook.png')"><b>&#x1F4F7; Facebook</b></button>
                 <button onclick="showPopup('images/vcard.png')"><b>&#x1F4F7; Share my Details</b></button>
             </div>
         </div>
